# Trailblazer_turtlebot

./: README.md
adventure_bringup/: CMakeLists.txt
adventure_bringup/launch/: adventure.launch  adventure.launch~  minimal.launch  minimal.launch~
adventure_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml
adventure_gripper/: package.xml~
adventure_gripper/adventure_arm_bringup/: CMakeLists.txt  package.xml
adventure_gripper/adventure_arm_bringup/config/: arm.yaml  arm.yaml~  gripper.yaml  gripper.yaml~
adventure_gripper/adventure_arm_bringup/launch/: arm.launch  arm.launch~  fake-arm.launch  fake-arm.launch~
adventure_gripper/adventure_arm_description/: CMakeLists.txt  package.xml
adventure_gripper/adventure_arm_description/urdf/: arm.urdf  arm.urdf.xacro  arm.xacro  arm.xacro~  arm_hardware.xacro
adventure_gripper/adventure_arm_moveit_config/: CMakeLists.txt  package.xml
adventure_gripper/adventure_arm_moveit_config/config/: finn.srdf  static_joints.yaml  turtlebot_arm.srdf~
adventure_gripper/adventure_arm_moveit_config/launch/: moveit_rviz.launch  moveit_rviz.launch~  planning_context.launch  planning_context.launch~  turtlebot_arm_moveit.launch  turtlebot_arm_moveit.launch~
adventure_recognition/: CMakeLists.txt  feature_match.py  object_search.py  package.xml  trajectory_demo.py
adventure_recognition/launch/: candy_kingdom_map.pgm  candy_kingdom_map.yaml  navigation.launch  navigation.launch~
adventure_simulator/adventure_description/: CMakeLists.txt
adventure_simulator/adventure_description/finn/: finn.urdf.xacro  finn.urdf.xacro~
adventure_simulator/adventure_gazebo/: CMakeLists.txt
adventure_simulator/adventure_teleop/: package.xml
adventure_slam/: CMakeLists.txt  adventure_slam.py  package.xml
adventure_slam/launch/: adventure_slam.launch
adventure_slam/src/: adventure_slam.py  geometry.py  map_maker.py  ros_map.py
bayesian_mapping/: CMakeLists.txt  package.xml
bayesian_mapping/src/: coordinate_test.py  ros_map.py
bayesian_mapping/src/project_4/: geometry.py  map_maker.py
kinematics_turtleBot/: CMakeLists.txt  package.xml
kinematics_turtleBot/src/: forward.py  inverse.py  services.py
kinematics_turtleBot/src/project_2/: kinematics.py
polgon_controller/launch/: project_3_world.launch
polgon_controller/src/: open_polygon.py  potential_field_nav.py
polygon_controller/: CMakeLists.txt  package.xml
polygon_controller/src/: prop_polygon.py
slam/: README.md
slam/adventure_bringup/: package.xml
slam/adventure_bringup/config/: arm.yaml
slam/adventure_bringup/launch/includes/: description.launch.xml
(+20 files in other folders)
