<package>
  <name>adventure_bringup</name>
  <version>0.1.0</version>
  <description>
     adventure_bringup provides roslaunch scripts for starting TurtleBot's base functionality (hardware drivers, description, etc). 
  </description>
  <author>Anton Mitrokhin</author>
  <maintainer email="anton.mitrokhin@phystech.edu">Anton Mitrokhin</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>linux_hardware</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
</package>
